# modules/user-search-svc/src/main/scala/com/jc/user/search/module/api/UserSearchGrpcApi.scala
@@ -1,21 +1,29 @@
 package com.jc.user.search.module.api
 
-import com.jc.user.domain.proto.User
-import com.jc.user.domain.{proto, UserEntity}
+import com.jc.user.domain.proto.{Department, User}
+import com.jc.user.domain.{proto, DepartmentEntity, UserEntity}
 import com.jc.user.search.api.proto.ZioUserSearchApi.RCUserSearchApiService
 import com.jc.user.search.api.proto.{
+  FieldSort,
+  GetDepartmentReq,
+  GetDepartmentRes,
   GetUserReq,
   GetUserRes,
   PropertySuggestion,
+  SearchDepartmentStreamReq,
+  SearchDepartmentsReq,
+  SearchDepartmentsRes,
   SearchUserStreamReq,
   SearchUsersReq,
   SearchUsersRes,
+  SuggestDepartmentsReq,
+  SuggestDepartmentsRes,
   SuggestUsersReq,
   SuggestUsersRes
 }
 import com.jc.user.search.model.ExpectedFailure
 import com.jc.user.search.module.auth.JwtAuthenticator
-import com.jc.user.search.module.repo.{SearchRepository, UserSearchRepo}
+import com.jc.user.search.module.repo.{DepartmentSearchRepo, SearchRepository, UserSearchRepo}
 import io.grpc.Status
 import scalapb.zio_grpc.RequestContext
 import zio.{Has, IO, ZIO, ZLayer}
@@ -45,6 +53,7 @@ object UserSearchGrpcApiHandler {
 
   final case class LiveUserSearchApiService(
     userSearchRepo: UserSearchRepo.Service,
+    departmentSearchRepo: DepartmentSearchRepo.Service,
     jwtAuthenticator: JwtAuthenticator.Service,
     logger: Logger[String])
       extends RCUserSearchApiService[Any] {
@@ -64,7 +73,7 @@ object UserSearchGrpcApiHandler {
     }
 
     override def searchUserStream(request: SearchUserStreamReq): ZStream[Any, Status, User] = {
-      val ss = request.sorts.map { sort => SearchRepository.FieldSort(sort.field, sort.order.isAsc) }
+      val ss = request.sorts.map(toRepoFieldSort)
       val q = if (request.query.isBlank) None else Some(request.query)
 
       val pageInitial = 0
@@ -85,7 +94,7 @@ object UserSearchGrpcApiHandler {
     }
 
     override def searchUsers(request: SearchUsersReq): IO[Status, SearchUsersRes] = {
-      val ss = request.sorts.map { sort => SearchRepository.FieldSort(sort.field, sort.order.isAsc) }
+      val ss = request.sorts.map(toRepoFieldSort)
       val q = if (request.query.isBlank) None else Some(request.query)
       userSearchRepo
         .search(q, request.page, request.pageSize, ss)
@@ -109,11 +118,89 @@ object UserSearchGrpcApiHandler {
           r => SuggestUsersRes(r.items.map(_.transformInto[PropertySuggestion]), SuggestUsersRes.Result.Success(""))
         )
     }
+
+    override def getDepartment(request: GetDepartmentReq): ZIO[Has[RequestContext], Status, GetDepartmentRes] = {
+      import DepartmentEntity._
+
+      val res: ZIO[Has[RequestContext], Status, GetDepartmentRes] = for {
+        _ <- authenticated(jwtAuthenticator)
+        res <- departmentSearchRepo
+          .find(request.id.asDepartmentId)
+          .mapError[Status](e => Status.INTERNAL.withDescription(ExpectedFailure.getMessage(e)))
+      } yield GetDepartmentRes(res.map(_.transformInto[proto.Department]))
+
+      res
+    }
+
+    override def searchDepartments(request: SearchDepartmentsReq): IO[Status, SearchDepartmentsRes] = {
+      val ss = request.sorts.map(toRepoFieldSort)
+      val q = if (request.query.isBlank) None else Some(request.query)
+      departmentSearchRepo
+        .search(q, request.page, request.pageSize, ss)
+        .fold(
+          e => SearchDepartmentsRes(result = SearchDepartmentsRes.Result.Failure(ExpectedFailure.getMessage(e))),
+          r =>
+            SearchDepartmentsRes(
+              r.items.map(_.transformInto[proto.Department]),
+              r.page,
+              r.pageSize,
+              r.count,
+              SearchDepartmentsRes.Result.Success(""))
+        )
+    }
+
+    override def searchDepartmentStream(request: SearchDepartmentStreamReq): ZStream[Any, Status, Department] = {
+      val ss = request.sorts.map(toRepoFieldSort)
+      val q = if (request.query.isBlank) None else Some(request.query)
+
+      val pageInitial = 0
+      val pageSize = 20
+
+      ZStream
+        .unfoldM(pageInitial) { page =>
+          departmentSearchRepo
+            .search(q, page, pageSize, ss)
+            .map { r =>
+              if ((r.page * r.pageSize) < r.count || r.items.nonEmpty) Some((r.items, r.page + 1))
+              else None
+            }
+        }
+        .mapConcat(identity)
+        .map(_.transformInto[proto.Department])
+        .mapError { e => Status.INTERNAL.withDescription(ExpectedFailure.getMessage(e)) }
+    }
+
+    override def suggestDepartments(request: SuggestDepartmentsReq): IO[Status, SuggestDepartmentsRes] = {
+      departmentSearchRepo
+        .suggest(request.query)
+        .fold(
+          e => SuggestDepartmentsRes(result = SuggestDepartmentsRes.Result.Failure(ExpectedFailure.getMessage(e))),
+          r =>
+            SuggestDepartmentsRes(
+              r.items.map(_.transformInto[PropertySuggestion]),
+              SuggestDepartmentsRes.Result.Success(""))
+        )
+    }
+
+    private def toRepoFieldSort(sort: FieldSort) = {
+      SearchRepository.FieldSort(sort.field, sort.order.isAsc)
+    }
   }
 
-  val live: ZLayer[UserSearchRepo with JwtAuthenticator with Logging, Nothing, UserSearchGrpcApiHandler] =
-    ZLayer.fromServices[UserSearchRepo.Service, JwtAuthenticator.Service, Logger[String], RCUserSearchApiService[Any]] {
-      (userSearchRepo: UserSearchRepo.Service, jwtAuth: JwtAuthenticator.Service, logger: Logger[String]) =>
-        LiveUserSearchApiService(userSearchRepo, jwtAuth, logger)
+  val live: ZLayer[
+    UserSearchRepo with DepartmentSearchRepo with JwtAuthenticator with Logging,
+    Nothing,
+    UserSearchGrpcApiHandler] =
+    ZLayer.fromServices[
+      UserSearchRepo.Service,
+      DepartmentSearchRepo.Service,
+      JwtAuthenticator.Service,
+      Logger[String],
+      RCUserSearchApiService[Any]] {
+      (
+        userSearchRepo: UserSearchRepo.Service,
+        departmentSearchRepo: DepartmentSearchRepo.Service,
+        jwtAuth: JwtAuthenticator.Service,
+        logger: Logger[String]) => LiveUserSearchApiService(userSearchRepo, departmentSearchRepo, jwtAuth, logger)
     }
 }
